--- a/libtomcrypt.pc.in
+++ b/libtomcrypt.pc.in
@@ -5,5 +5,5 @@ includedir=${prefix}/@CMAKE_INSTALL_INCLUDEDIR@/@PROJECT_NAME@
 Name: LibTomCrypt
 Description: public domain open source cryptographic toolkit
 Version: @PROJECT_VERSION@
-Libs: -L${libdir} -ltomcrypt @MPI_PROVIDERS_LIBS@
-Cflags: -I${includedir} @MPI_PROVIDERS_CFLAGS@
+Libs: -L${libdir} -ltomcrypt @PKG_CONFIG_LIBS@
+Cflags: -I${includedir} @PKG_CONFIG_CFLAGS@
